--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
+    "react-swipe-to-delete-ios": "^2.1.0",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.62.1",
     "scss": "^0.2.4",
     "typescript": "^4.9.5",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.6",
     "@types/uuid": "^9.0.1"
   }
 }
