--- a/notes/package.json
+++ b/notes/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.4",
     "easy-peasy": "^6.0.0",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
